# PlasticConstraint

./: CMakeLists.txt  PlasticConstraintConfig.cmake.in  README.md
examples/python/: Finger.py  Finger.py.view  FingerStopper.py  FingerStopper.py.view  StressMapping.py  StressMapping.py.view  example.py
examples/xml/: IdentityMapping.scn  IdentityMapping.scn.view
src/PlasticConstraint/: BoxLagrangianConstraint.cpp  BoxLagrangianConstraint.h  BoxLagrangianConstraint.inl  LinearMapping.h  StressMapping.cpp  StressMapping.h  StressMapping.inl  config.h.in  init.cpp  init.h
tests/: CMakeLists.txt
